--- a/src/ServiceFabric/ServiceFabric.Test/ServiceFabric.Test.csproj
+++ b/src/ServiceFabric/ServiceFabric.Test/ServiceFabric.Test.csproj
@@ -10,6 +10,10 @@
     <RootNamespace>$(LegacyAssemblyPrefix)$(PsModuleName)$(AzTestAssemblySuffix)</RootNamespace>
   </PropertyGroup>
 
+	<PropertyGroup>
+		<NoWarn>$(NoWarn);NU1605</NoWarn>
+	</PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.KeyVault" Version="3.0.1" />
     <PackageReference Include="Microsoft.Azure.KeyVault.WebKey" Version="3.0.1" />
