--- a/src/ServiceFabric/ServiceFabric/ServiceFabric.csproj
+++ b/src/ServiceFabric/ServiceFabric/ServiceFabric.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <PsModuleName>ServiceFabric</PsModuleName>
@@ -10,11 +10,20 @@
     <RootNamespace>$(LegacyAssemblyPrefix)$(PsModuleName)</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <LangVersion>8.0</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <NoWarn>$(NoWarn);NU1605</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.KeyVault" Version="3.0.1" />
     <PackageReference Include="Microsoft.Azure.KeyVault.WebKey" Version="3.0.1" />
     <PackageReference Include="Microsoft.Azure.Management.ServiceFabric" Version="1.3.0" />
     <PackageReference Include="Azure.ResourceManager.ServiceFabricManagedClusters" Version="1.1.0-beta.2" />
+    <PackageReference Include="Azure.Identity " Version="1.6.1" />
   </ItemGroup>
 
   <ItemGroup>
