--- a/src/ServiceFabric/ServiceFabric.Test/ServiceFabric.Test.csproj
+++ b/src/ServiceFabric/ServiceFabric.Test/ServiceFabric.Test.csproj
@@ -18,10 +18,18 @@
     <PackageReference Include="Microsoft.Azure.KeyVault" Version="3.0.1" />
     <PackageReference Include="Microsoft.Azure.KeyVault.WebKey" Version="3.0.1" />
     <PackageReference Include="Microsoft.Azure.Management.ServiceFabric" Version="1.3.0" />
-    <PackageReference Include="Azure.ResourceManager.ServiceFabricManagedClusters" Version="1.1.0-beta.2" />
+	  <PackageReference Include="Azure.ResourceManager" Version="1.7.0" />
   </ItemGroup>
 
-  <ItemGroup>
+
+	<ItemGroup>
+		<Reference Include="Azure.ResourceManager.ServiceFabricManagedClusters">
+			<HintPath>..\..\..\..\azure-sdk-for-net\artifacts\bin\Azure.ResourceManager.ServiceFabricManagedClusters\Debug\netstandard2.0\Azure.ResourceManager.ServiceFabricManagedClusters.dll</HintPath>
+		</Reference>
+	</ItemGroup>
+
+
+	<ItemGroup>
     <ProjectReference Include="..\ServiceFabric\ServiceFabric.csproj" />
   </ItemGroup>
 
