more updates on nodetype and applicationType commands

--- a/src/ServiceFabric/ServiceFabric/ServiceFabric.csproj
+++ b/src/ServiceFabric/ServiceFabric/ServiceFabric.csproj
@@ -28,13 +28,10 @@
 
   <ItemGroup>
     <Compile Remove="Commands\ManagedClusters\Applications\**" />
-    <Compile Remove="Commands\ManagedClusters\ApplicationTypeVersions\**" />
     <Compile Remove="Commands\ManagedClusters\Services\**" />
     <EmbeddedResource Remove="Commands\ManagedClusters\Applications\**" />
-    <EmbeddedResource Remove="Commands\ManagedClusters\ApplicationTypeVersions\**" />
     <EmbeddedResource Remove="Commands\ManagedClusters\Services\**" />
     <None Remove="Commands\ManagedClusters\Applications\**" />
-    <None Remove="Commands\ManagedClusters\ApplicationTypeVersions\**" />
     <None Remove="Commands\ManagedClusters\Services\**" />
   </ItemGroup>
 
@@ -78,6 +75,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Commands\ManagedClusters\Applications\" />
   </ItemGroup>
 
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory).., build.proj))\src\Az.Post.props" />
