Updating newcluster command to handle client certificates

--- a/src/ServiceFabric/ServiceFabric/ServiceFabric.csproj
+++ b/src/ServiceFabric/ServiceFabric/ServiceFabric.csproj
@@ -16,6 +16,7 @@
 
   <PropertyGroup>
     <NoWarn>$(NoWarn);NU1605</NoWarn>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
