add new NSG commands

--- a/src/Accounts/Accounts/Utilities/CommandMappings.json
+++ b/src/Accounts/Accounts/Utilities/CommandMappings.json
@@ -6351,6 +6351,9 @@
       "Add-AzServiceFabricClientCertificate": {},
       "Add-AzServiceFabricManagedClusterClientCertificate": {},
       "Add-AzServiceFabricManagedClusterNetworkSecurityRule": {},
+      "Set-AzServiceFabricManagedClusterNetworkSecurityRule": {},
+      "Remove-AzServiceFabricManagedClusterNetworkSecurityRule": {},
+      "Get-AzServiceFabricManagedClusterNetworkSecurityRule": {},
       "Add-AzServiceFabricManagedNodeTypeVMExtension": {},
       "Add-AzServiceFabricManagedNodeTypeVMSecret": {},
       "Add-AzServiceFabricNode": {},
